Fix invisible file input TODO: implement regressive search TODO: database schema TODO: implement database telecomunication

--- a/client/src/assets/styles/sudoku.css
+++ b/client/src/assets/styles/sudoku.css
@@ -9,8 +9,10 @@
 }
 
 .row .sudoku input[type=file] {
-    position: absolute;
+    position: relative;
     opacity: 0;
+    width: 0;
+    height: 0;
     cursor: pointer;
 }
 
